--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
         "allowJs": false,
         "skipLibCheck": true,
         "target": "ES5",
+        // "module": "ESNext",
+        "importHelpers": true,
+        "moduleResolution": "node",
         "sourceMap": true,
         "rootDir": "src",
         "strict": true,
@@ -10,6 +13,10 @@
         "noImplicitReturns": true,
         "noUnusedParameters": true,
     },
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.vue",
+    ],
     "exclude": [
         "node_modules"
     ]
