--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "VueTemplate",
+  "name": "vue-template",
   "version": "1.0.0",
   "description": "手动搭建一个使用Webpack打包的，支持Typescript、Vue3、Sass等技术的前端开发模板。",
-  "main": "webpack.config.js",
+  "main": "src/index.ts",
   "scripts": {
-    "build.dev": "npx cross-env NODE_ENV=development webpack",
+    "dev": "npx webpack-dev-server --inline --progress",
     "build": "npx cross-env NODE_ENV=production webpack",
-    "dev": "npx webpack-dev-server --inline --progress"
+    "build.dev": "npx cross-env NODE_ENV=development webpack"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
-    "html-webpack-plugin": "4",
+    "html-webpack-plugin": "^4.5.0",
     "json5-loader": "^4.0.1",
     "mini-css-extract-plugin": "^1.3.1",
     "sass": "npm:dart-sass@^1.25.0",
@@ -33,13 +33,12 @@
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "4",
-    "webpack-cli": "3",
-    "webpack-dev-server": "3"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "vue": "^2.6.12",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   }
