--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
+    "axios": "^0.21.0",
+    "echarts": "^5.0.0",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
