--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "json5-loader": "^4.0.1",
     "mini-css-extract-plugin": "^1.3.1",
