--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "json5-loader": "^4.0.1",
+    "less-loader": "^7.2.0",
     "mini-css-extract-plugin": "^1.3.1",
     "open-browser-webpack-plugin": "0.0.5",
     "sass": "npm:dart-sass@^1.25.0",
