--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "手动搭建一个使用Webpack打包的，支持Typescript、Sass、Vue、Ant Design等技术的前端开发模板。",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "npx webpack-dev-server --inline --progress",
-    "build": "npx cross-env NODE_ENV=production webpack",
-    "build.dev": "npx cross-env NODE_ENV=development webpack"
+    "dev": "webpack-dev-server --inline --progress",
+    "build": "cross-env NODE_ENV=production webpack",
+    "build.dev": "cross-env NODE_ENV=development webpack"
   },
   "repository": {
     "type": "git",
