--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "strictNullChecks": false,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
-        "noUnusedParameters": true,
+        // "noUnusedParameters": true,
         "noUnusedLocals": true
     },
     "include": [
